# turkey_rahyab_interview

./: db.sqlite3  manage.py  pyproject.toml  turkey.postman_collection.json
api/: pagination.py  serializers.py  urls.py  views.py
base/: models.py
post/: models.py
post/migrations/: 0001_initial.py  0002_alter_announcement_owner.py  0003_announcement_picture.py  0004_announcement_views_count.py  0005_announcement_accept.py
turkey_rahyab_interview/: asgi.py  settings.py  urls.py  wsgi.py
user/: models.py
user/migrations/: 0001_initial.py  0002_remove_useraccount_is_student_and_more.py  0003_alter_useraccount_managers.py
